word wrap bug fix

--- a/apps/style/_main.scss
+++ b/apps/style/_main.scss
@@ -23,6 +23,8 @@
             font-weight: bold;
             color: var(--clr-almost-white);
             width: 85%;
+        }
+        .pass-generated {
             word-wrap: break-word;
         }
         button {
